@@ -421,16 +421,19 @@
   </section>
 
   <section>
-    <title id="tool_webauthn">Webauthn devices</title>
+    <title id="tool_webauthn">WebAuthn devices</title>
 
-    <para>See the <link linkend="a_webauthn">Webauthn/FIDO2 appendix</link>
-    for an overview about Webauthn/FIDO2 in LAM.</para>
+    <para>See the <link linkend="a_webauthn">WebAuthn/FIDO2 appendix</link>
+    for an overview about WebAuthn/FIDO2 in LAM.</para>
 
     <para>Here you can manage your webauthn/FIDO2 devices.</para>
 
-    <para>You can register additional security devices and remove old ones. If
-    no more device is registered then LAM will ask you for registration on
-    next login.</para>
+    <para>You can register additional security devices and remove old ones. In
+    addition, you can set a name for your devices. This helps if you need to
+    remove a device at a later point.</para>
+
+    <para>If no more device is registered then LAM will ask you for
+    registration on next login.</para>
 
     <screenshot>
       <graphic fileref="images/tool_webauthn1.png"/>
